# FastAPI

./: config.py  main.py  pyproject.toml
auth/: auth.py  database.py  manager.py  shcemas.py
complited_lessons/: get_user.py
migrations/: env.py
migrations/versions/: 29334bc6e178_database_create.py  95348701ef10_database_replace.py  eaadab4b8f2e_initial.py
models/: __init__.py  models.py
