[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "learn_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
